[project]
name = "knowledge-cartography"
version = "0.1.0"
description = ""
authors = [
    {name = "dagny099",email = "dagny099@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.24.0)",
    "pandas (>=2.0.0)",
    "networkx (>=3.1)",
    "neo4j (>=5.0.0)",
    "matplotlib (>=3.7.0)",
    "seaborn (>=0.12.0)",
    "plotly (>=5.15.0)",
    "python-dotenv (>=1.0.0)",
    "tqdm (>=4.65.0)",
    "requests (>=2.31.0)",
    "pytest (>=7.4.0)",
    "black (>=23.0.0)",
    "flake8 (>=6.0.0)",
    "semanticscholar (>=0.10.0,<0.11.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "pyvis (>=0.3.2,<0.4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
